tests/baselines/reference/exportAssignmentWithImportStatementPrivacyError.errors.txt
==== tests/cases/compiler/exportAssignmentWithImportStatementPrivacyError.ts (2 errors) ====
    module m2 {
        export interface connectModule {
            (res, req, next): void;
        }
        export interface connectExport {
            use: (mod: connectModule) => connectExport;
            listen: (port: number) => void;
        }
    
    }
    
    module M {
        export var server: {
                   ~~~~~~~~~
                   ~~~~~~~~~
            (): m2.connectExport;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            test1: m2.connectModule;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            test2(): m2.connectModule;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        };
    ~~~~~
!!! exportAssignmentWithImportStatementPrivacyError.ts(13,16): error TS2027: Exported variable 'server' has or is using private type 'm2.connectModule'.
    ~~~~~
!!! exportAssignmentWithImportStatementPrivacyError.ts(13,16): error TS2027: Exported variable 'server' has or is using private type 'm2.connectExport'.
    }
    import M22 = M;
    
    export = M;